--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@js-x/require-yml",
   "description": "require('*.yml')",
   "version": "1.0.0",
+  "main": "require-yml.js",
   "files": [
     "require-yml.js"
   ],
